--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1><a href="<%= @link.url %>"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.email %></small></h1>
+  <h1><a href="<%= @link.url %>"><%= @link.title %></a><br> <small> Submitted by <%= @link.user.email %></small></h1>
 </div>
 
 <div class="btn-group">
@@ -33,10 +33,15 @@
 <div id="comments">
   <%= render :partial => @link.comments %>
 </div>
-<%= simple_form_for [@link, Comment.new]  do |f| %>
-  <div class="field">
-    <%= f.text_area :body, class: "form-control" %>
-  </div>
-  <br>
-  <%= f.submit "Add Comment", class: "btn btn-primary" %>
+
+<% if user_signed_in? %>
+  <%= simple_form_for [@link, Comment.new]  do |f| %>
+    <div class="field">
+      <%= f.text_area :body, class: "form-control" %>
+    </div>
+    <br>
+    <%= f.submit "Add Comment", class: "btn btn-primary" %>
+  <% end %>
+<% else %>
+  <%= link_to 'Please Sign Up to leave a comment', new_user_registration_path(@link), class: "btn btn-info btn-sm" %>
 <% end %>
