--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1><a href="<%= @link.url %>"><%= @link.title %></a><br> <small> Submitted by <%= @link.user.email %></small></h1>
+  <h2><a href="<%= @link.url %>"><%= @link.title %></a><br> <small> Submitted by <%= @link.user.email %></small></h2>
 </div>
 
 <div class="btn-group">
@@ -26,22 +26,26 @@
   <% end %>
 </div>
 
-<h3 class="comments_title">
-  <%= @link.comments.count %> Comments
-</h3>
+<div class="row">
+  <div class="col-md-9 col-md-offset-1">
+    <h3 class="comments_title">
+      <%= @link.comments.count %> Comments
+    </h3>
 
-<div id="comments">
-  <%= render :partial => @link.comments %>
-</div>
-
-<% if user_signed_in? %>
-  <%= simple_form_for [@link, Comment.new]  do |f| %>
-    <div class="field">
-      <%= f.text_area :body, class: "form-control" %>
+    <div id="comments">
+      <%= render :partial => @link.comments %>
     </div>
-    <br>
-    <%= f.submit "Add Comment", class: "btn btn-primary" %>
-  <% end %>
-<% else %>
-  <%= link_to 'Please Sign Up to leave a comment', new_user_registration_path(@link), class: "btn btn-info btn-sm" %>
-<% end %>
+
+    <% if user_signed_in? %>
+      <%= simple_form_for [@link, Comment.new]  do |f| %>
+        <div class="field">
+          <%= f.text_area :body, class: "form-control" %>
+        </div>
+        <br>
+        <%= f.submit "Add Comment", class: "btn btn-primary" %>
+      <% end %>
+    <% else %>
+      <%= link_to 'Please create an account to leave a comment...', new_user_registration_path, class: "btn btn-info btn-sm" %>
+    <% end %>
+  </div>
+</div>
